--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.17.0",
     "formik": "^2.2.6",
     "jss": "^10.5.1",
+    "moment": "^2.29.1",
     "polished": "^4.1.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
