--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "date-fns": "^2.17.0",
+    "form-data": "^4.0.0",
     "formik": "^2.2.6",
     "jss": "^10.5.1",
     "moment": "^2.29.1",
