--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "yup": "^0.32.8"
   },
   "scripts": {
-    "start": "set PORT=5000 && react-scripts start",
-    "build": "react-scripts build",
+   "start": "react-scripts start",
+    "build": "react-scripts build"
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
