--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "axios": "^0.21.1",
     "date-fns": "^2.17.0",
     "form-data": "^4.0.0",
@@ -26,6 +27,7 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
+    "react-number-format": "^4.4.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
