--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "polished": "^4.1.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
