Handled uploading multiple images in product

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.17.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.6",
+    "image-to-base64": "^2.1.1",
     "jss": "^10.5.1",
     "moment": "^2.29.1",
     "polished": "^4.1.0",
