--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-helmet": "^6.1.0",
     "react-number-format": "^4.4.4",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.0",
