--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
+    "react-router-last-location": "^2.0.1",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
