--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^12.6.3",
     "@unicef/material-ui-currency-textfield": "^0.8.6",
     "axios": "^0.21.1",
+    "chart.js": "^3.0.2",
     "date-fns": "^2.17.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.6",
@@ -29,6 +30,7 @@
     "polished": "^4.1.0",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-chartjs-2": "^2.11.1",
     "react-currency-format": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
