--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formik": "^2.2.6",
     "image-to-base64": "^2.1.1",
     "jss": "^10.5.1",
+    "jss-rtl": "^0.3.0",
     "moment": "^2.29.1",
     "polished": "^4.1.0",
     "react": "^17.0.1",
