--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "date-fns": "^2.17.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.6",
+    "i18next": "^20.3.5",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.2.8",
     "image-to-base64": "^2.1.1",
     "jss": "^10.5.1",
     "jss-rtl": "^0.3.0",
@@ -36,6 +39,7 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^11.11.4",
     "react-number-format": "^4.4.4",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.3",
